FIX: added missed z-index value for promo badge

--- a/components/features/homepage/RecommendedEventsSection/RecommendedEventsSection.module.scss
+++ b/components/features/homepage/RecommendedEventsSection/RecommendedEventsSection.module.scss
@@ -65,6 +65,9 @@ $slide-total-spacing-mobile-large: ($slides-per-view-mobile-large - 1) * $slide-
         }
     }
   }
+  :global(.ant-ribbon){
+    z-index: 1;
+  }
 }
 
 .carouselWrapper {
